refactoring of the code; fixing layout bugs.

--- a/src/app/service/service.component.scss
+++ b/src/app/service/service.component.scss
@@ -25,6 +25,11 @@
 .gallery-container {
   min-height: 500px;
   padding-bottom: 100px;
+  margin-top: 85px;
+
+  @media only screen and (max-width: 1279px) {
+    margin-top: 64px;
+  }
 
   h1 {
     text-align: center;
