--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 footer {
   height: auto;
-  min-height: 350px;
+  min-height: 150px;
   background-color: var(--violet);
   background-position: top center;
   background-repeat: no-repeat;
