--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -10,8 +10,8 @@ $colors: (
 );
 
 header {
-  position: relative;
-  top: 1px;
+  position: absolute;
+  top: 0px;
   width: 100%;
   left: 0;
   z-index: 9000;
